--- a/src/scss/section/_common.scss
+++ b/src/scss/section/_common.scss
@@ -364,6 +364,7 @@
 			width: initial;
 			.item{
 				margin-bottom: $space-l;
+				max-width: 100% !important;
 			}
 		}
 	}
